--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "sass": "^1.80.5",
+    "swr": "^2.2.5",
     "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
